shifted posts page to show correctly

--- a/app/assets/stylesheets/posts.css
+++ b/app/assets/stylesheets/posts.css
@@ -24,7 +24,7 @@
 }
 
 .post:hover {
-  background-color: #ebe7e7ee;
+  /* background-color: #ebe7e7ee; */
   box-shadow: 0px 0px 15px 12px var(--box-shadow-color);
 }
 .message {
@@ -94,7 +94,7 @@
 
 .posts-container {
   position: relative;
-  top: 90px;
+  top:150px;
 }
 
 
